--- a/responesive.css
+++ b/responesive.css
@@ -1,6 +1,6 @@
 @media(max-width: 1023px) and (min-width: 740px) {
     .navbar__content{
-        display: flex !important;
+        display: flex;
     }
     .footer--contact{
         display: flex;
@@ -12,7 +12,7 @@
 
 
 
-@media (max-width:920px) {
+@media (max-width:960px) {
     .search__box input {
         display: none;
     }
@@ -25,6 +25,10 @@
         padding: 16px;
         
     }
+    .navbar{
+        justify-content: flex-start !important;
+    }
+    
 }
 @media (max-width: 739px) {
     .introduce__content{
@@ -55,7 +59,7 @@
         width: 100%;
     }
     .navbar__content {
-        display: none;
+        display: none !important;
         justify-content: space-between;
         width: 100vw;
         background-color: white;
